Add feature to reveal a cell
